   -  warning 'for -coff leading underscore required for start label' is no
      longer emitted if coff format is 64-bit.
   -  [] operator didn't work correctly if located between a struct name and
      a member name; see dotop6.asm.
   -  option -mz: if a "nongroup"-segment was located between 2 segments of
      a group, the offsets of the second "group"-segment were calculated 
      wrong. See group2.asn.

   Other changes:
   -  OPTION WIN64:4 added.
   -  cleaned the source code a bit so CLang v5 can compile it without 
      warning. Added CLUnix.mak, CLang.mak renamed to CLWin.mak.

   11/16/2013, v2.11a:

   Bugfixes:
   -  regression in v2.11, Unix version only: _splitpath() emulation code
      didn't handle correctly dots in directory part of the filename.

   10/20/2013, v2.11:

   Bugfixes:
   -  regression in v2.10: type expression may have given incorrect result
      if it contained an indirect memory operand; see types14.asm.
   -  shift instructions with unsized memory operand as first operand were
      silently assumed to have byte size; see shift4.aso.
   -  concatenation operator (a '\' as last non-white space character) wasn't
      handled if it appeared after line expansion only; see expans38.asm.
   -  EXPORT or PRIVATE attributes in a PROTO directive weren't ignored;
      this may have caused problems if the attribvtes differed from those in
      the corresponding PROC directive.
   -  userdefined prologue/epilogue macros: bit 7 of flag argument (=export)
      wasn't set.
   -  64-bit: if OPTION FRAME:AUTO was set, the default prologue of all PROCs
      with FRAME attribute did setup the RBP register, even if no params or
      locals were defined.
   -  in v2.00-2.10, CMP instruction did not reject the LOCK prefix.
   -  64-bit, CodeView debugging info: stack variables were defined via
      S_BPREL32-records, which works only as long as value of RBP fits in
      32-bit; changed to S_REGREL32.